--- a/PythonProject1/index.html
+++ b/PythonProject1/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Турбаза "Тёплый огонёк"</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="hat">
@@ -28,8 +31,15 @@
         </div>
     </div>
     <div id="main-title">
-        <h1>Турбаза "Тёплый огонёк"</h1>
+        <h1>Турбаза “Тёплый огонёк”</h1>
     </div>
     <div id="main-line"></div>
+    <div id="main-photo">
+        <div class="separator">Наши плюсы</div>
+        <div>
+
+        </div>
+    </div>
+
 </body>
 </html>
