--- a/PythonProject1/index.html
+++ b/PythonProject1/index.html
@@ -26,20 +26,55 @@
 
         </div>
         <div id="icons">
-            <img src="icons/question-mark.png" id="question">
+            <img src="icons/question-mark1.png" id="question">
             <img src="icons/catalogue.png" id="catalogue">
         </div>
     </div>
+
+
     <div id="main-title">
         <h1>Турбаза “Тёплый огонёк”</h1>
     </div>
+
+
     <div id="main-line"></div>
+
+
     <div id="main-photo">
         <div class="separator">Наши плюсы</div>
-        <div>
+        <div id="slider">
 
+        <button class="btn" id="prev"><img src="icons/cursor-right.png"></button>
+
+        <div id="slides">
+
+            <div class="slide" id="plus-photo-1">
+            <img src="photo/main-photo-1.jpg">
+            <p>Глобальная инфа о базе1
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            </div>
+
+            <div class="slide" id="plus-photo-2">
+            <img src="photo/main-house.jpg">
+            <p>Глобальная инфа о базе2
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            </div>
+
+            <div class="slide" id="plus-photo-3">
+            <img src="photo/main-house.jpg">
+            <p>Глобальная инфа о базе3
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            </div>
+
+        </div>
+        <button class="btn" id="next"><img src="icons/cursor-right.png" ></button>
         </div>
     </div>
 
+
+    <script src="index.js"></script>
 </body>
 </html>
