--- a/PythonProject1/index.html
+++ b/PythonProject1/index.html
@@ -40,29 +40,29 @@
     <div id="main-line"></div>
 
 
-    <div id="main-photo">
+    <div id="main-photo" class="block">
         <div class="separator">Наши плюсы</div>
-        <div id="slider">
+        <div class="slider">
 
         <button class="btn" id="prev"><img src="icons/cursor-right.png"></button>
 
-        <div id="slides">
+        <div id="slides-main">
 
-            <div class="slide" id="plus-photo-1">
+            <div class="slide photo">
             <img src="photo/main-photo-1.jpg">
             <p>Глобальная инфа о базе1
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniaaboris nisi ut consequat. </p>
             </div>
 
-            <div class="slide" id="plus-photo-2">
+            <div class="slide photo">
             <img src="photo/main-house.jpg">
             <p>Глобальная инфа о базе2
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniaaboris nisi ut consequat. </p>
             </div>
 
-            <div class="slide" id="plus-photo-3">
+            <div class="slide photo">
             <img src="photo/main-house.jpg">
             <p>Глобальная инфа о базе3
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -73,8 +73,50 @@
         <button class="btn" id="next"><img src="icons/cursor-right.png" ></button>
         </div>
     </div>
+    <div id="rooms">
+        <div class="separator gaps">
+            <p>Номера</p>
+        </div>
+    </div>
+    <div class="block slider">
 
+        <button class="btn" id="prev-room"><img src="icons/cursor-right.png"></button>
 
+        <div id="slides-room">
+
+            <div class="slide photo">
+            <img src="photo/main-photo-1.jpg">
+            <p>Глобальная инфа о базе1
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            </div>
+
+            <div class="slide photo">
+            <img src="photo/main-house.jpg">
+            <p>Глобальная инфа о базе2
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            </div>
+
+            <div class="slide photo">
+            <img src="photo/main-house.jpg">
+            <p>Глобальная инфа о базе3
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniaaboris nisi ut consequat. </p>
+            </div>
+
+        </div>
+        <button class="btn" id="next-room"><img src="icons/cursor-right.png" ></button>
+        </div>
+    <div id="location">
+        <div class="separator gaps">
+            <p>Местоположение</p>
+        </div>
+        <div class="block block-map">
+            <img src="map\map-location.jpg" id="map-img">
+            <p>Турбаза расположена на западном побережье озера Байкал, в живописной бухте у подножия Приморского хребта. Ближайший населенный пункт — поселок Листвянка (15 км). Это идеальная точка для старта путешествий по озеру: до Иркутска — 70 км, а до знаменитого Кругобайкальского пути — всего 20 минут на катере.</p>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
