Сделана кнопка забронировать, начата секция отзывов

--- a/PythonProject1/index.html
+++ b/PythonProject1/index.html
@@ -14,8 +14,8 @@
     <div id="hat">
         <img src="icons/pine.png" id="pine">
         <div id="buttons-space">
-            <button class="button-hat">Номера</button>
-            <button class="button-hat">Местоположение</button>
+            <button class="button-hat" onclick="location.href='#rooms'">Номера</button>
+            <button class="button-hat" onclick="location.href='#location'">Местоположение</button>
             <button class="button-hat">Отзывы</button>
             <div id="contacts">
                 <ul>
@@ -116,6 +116,13 @@
             <img src="map\map-location.jpg" id="map-img">
             <p>Турбаза расположена на западном побережье озера Байкал, в живописной бухте у подножия Приморского хребта. Ближайший населенный пункт — поселок Листвянка (15 км). Это идеальная точка для старта путешествий по озеру: до Иркутска — 70 км, а до знаменитого Кругобайкальского пути — всего 20 минут на катере.</p>
         </div>
+    </div>
+
+    <div id="booking" class="separator">
+        <button id="book-button" class="btn"><p>Забронировать</p></button>
+    </div>
+    <div id="feedbacks">
+        <div class="separator">Отзывы клиентов</div>
     </div>
     <script src="index.js"></script>
 </body>
