якорь на отзывы

--- a/PythonProject1/index.html
+++ b/PythonProject1/index.html
@@ -16,7 +16,8 @@
         <div id="buttons-space">
             <button class="button-hat" onclick="location.href='#rooms'">Номера</button>
             <button class="button-hat" onclick="location.href='#location'">Местоположение</button>
-            <button class="button-hat" onclick="location.href='#feedbacks'">Отзывы</button>
+            <button class="button-hat" onclick="location.href='#feedbacks';">Отзывы</button>
+
             <div id="contacts">
                 <ul>
                     <li>8-800-555-35-35</li>
